# hft_engine

./: .gitignore  CMakeLists.txt  README.md  build_output.txt  build_result.txt  cmake_log_cmd.txt  cmake_output.txt  error_lines.txt  errors.txt  first_errors.txt  hft_errors.txt  hft_errors2.txt  test_env.cpp
backtest/: CMakeLists.txt  backtest_runner.cpp
configs/: prod.yaml
core/: CMakeLists.txt  benchmark.hpp  config.hpp  logger.hpp  ring_buffer.hpp  time.hpp  types.hpp
data/: CMakeLists.txt  book.hpp  feeder_interface.hpp  market_data_types.hpp
execution/: CMakeLists.txt  execution_engine.hpp  order_gateway_interface.hpp  risk_check.hpp
features/: CMakeLists.txt  feature_calculator.hpp
infra/: Dockerfile  main.cpp
infra/scripts/: setup_env.sh
models/: CMakeLists.txt  model_interface.hpp  stat_arb.hpp
risk/: CMakeLists.txt  kill_switch.hpp
tests/: CMakeLists.txt  test_core.cpp
tools/: CMakeLists.txt  benchmark_runner.cpp
viz/: __init__.py  data_loader.py  equity_curve.py  latency_landscape.py  liquidity_heatmap.py  orderbook_surface.py  requirements.txt
